feat(users): prefix support for users service

--- a/users/.env
+++ b/users/.env
@@ -25,6 +25,7 @@ KEYCLOAK_USERS_PUBLIC_KEY =
 MINIO_URI=minio:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
+S3_PREFIX=
 
 # app settings.
 ROOT_PATH=
