feat(pipelines): prefix support for pipelines service

--- a/pipelines/.env
+++ b/pipelines/.env
@@ -27,5 +27,6 @@ DB_NAME="pipelines"
 MINIO_URI=minio:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
+S3_PREFIX=
 
 KEYCLOAK_URI=http://bagerdoc-keycloack
