--- a/pipelines/.env
+++ b/pipelines/.env
@@ -23,7 +23,7 @@ DB_HOST="localhost"
 DB_PORT=5432
 DB_NAME="pipelines"
 
-# S3 settings.
+# S3 settings
 S3_CREDENTIALS_PROVIDER=minio
 S3_PREFIX=
 S3_ENDPOINT=minio:9000
